--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.4",
     "cross-env": "^7.0.0",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.21.2",
     "mongoose": "^5.8.11",
@@ -25,6 +27,7 @@
     "multer": "^1.4.2",
     "node-sass": "^4.13.1",
     "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "postcss-loader": "^3.0.0",
