--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.21.2",
@@ -41,7 +42,7 @@
     "webpack-cli": "^3.3.11"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2 --ignore 'scss' --ignore 'static' ",
+    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore 'scss' --ignore 'static' ",
     "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
     "build:assets": "cross-env WEBPACK_ENV=production webpack"
   },
